--- a/public/404.html
+++ b/public/404.html
@@ -10,10 +10,10 @@
         // ========================================
         const segment = 1
 
-        sessionStorage.redirect = '/' + location.pathname.slice(1).split('/').slice(segment).join('/')
+        sessionStorage.redirect = location.href;
 
         location.replace(
-            location.pathname.split('/').slice(0, 1 + segment).join('/')
+            "/LostArkTools/"
         )
     </script>
 </head>
